@@ -10,6 +10,9 @@
 
 	* libdtrace/dt_open.c (dtrace_close): Free the dt_module_path.
 	* libdtrace/dt_module.c (d_tkern_path_update): Close the fts handle.
+	* libdtrace/dt_impl.h (dtrace_hdt_t.dt_ctf_elf_ref): New refcount.
+	* libdtrace/dt_module.c (dt_module_init_elf): Bump it approriately.
+	(dt_module_unload): Unbump it when a built-in module is closed.
 
 2013-10-31  Nick Alcock  <nick.alcock@oracle.com>
 
